Revision history for {{$dist->name}}

{{$NEXT}}

0.051     2014-02-23 01:10:45Z
          - fix argument passed to [Git::Commit] that no longer works now that
            it uses Path::Tiny instead of Path::Class
          - new "surgical_podweaver" configuration option
          - minimum perl version softened to 5.010, except for when minting
            distributions (still at 5.013002)

0.050     2014-02-13 17:39:49Z
          - adjusted CONTRIBUTING content for XS-based dists - I promise to
            include a token Makefile.PL to allow development without dzil.

0.049     2014-01-29 02:56:31Z
          - fixed tests that can fail on systems with no spelling dictionaries
            installed

0.048     2014-01-21 04:07:40Z
          - removed [PruneCruft], which does nothing useful with
            [Git::GatherDir]
          - removed [ManifestSkip] which does nothing useful when there is no
            MANIFEST.SKIP file
          - add an option for what files to copy from the release, for easier
            customization
          - added a dummy option for [Git::Check], to work around an issue in
            Config::MVP::Assembler::WithBundles::_add_bundle_contents

0.047     2014-01-14 05:34:39Z
          - adjusted plugin order so [PkgVersion] gets a chance to insert into
            the first blank line of the package (new in 5.010) before other
            modules insert their code lines
          - pod removed from in the middle of source is now replaced with a
            commented-out version of itself, to avoid altering line numbers

0.046     2014-01-11 19:23:31Z
          - ensure that .pod files are also eligible for indexing
          - minting profile switched to using a dist sharedir to store
            profiles, so we can now ship using Module::Build::Tiny

0.045     2014-01-06 18:32:05Z
          - fixed transposed link text in documentation (thanks, rwstauner!)
          - fixed new tests that fail when run outside a git repository
