@@ -72,6 +72,7 @@ Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::InstallRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
+Dist::Zilla::Plugin::VerifyPhases = 0
 ; FIXME: [PodWeaver] needs to inject plugin and section prereqs
 Pod::Weaver::PluginBundle::Default = 4.000
 Pod::Weaver::Plugin::Transformer = 0
